test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_parse/double_declarator.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[13]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(x)
  [
  const double(2.0)
  ]
  ;
  }
